force-app/main/default/objects/sf_devops__Vcs__c/sf_devops__Vcs__c.object-meta.xml
<CustomObject>
    <description>Represents a supported version control system in the DevOps Center</description>
    <label>Source Control System</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Vcs Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Source Control Systems</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>