force-app/main/default/objects/sf_devops__Vcs__c/fields/sf_devops__Named_Credential__c.field-meta.xml
<CustomField>
    <fullName>sf_devops__Named_Credential__c</fullName>
    <description>The developer name of the Named Credential to use for access to this version control system.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Named Credential</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>